...
                  ),
          ),
          Row(
            children: [
              Expanded(
                child: GestureDetector(
                  key: const Key('gender_male_button'),
                  onTap: () => onChanged(Gender.male),
                  child: Container(
                    color: Colors.transparent,
                    child: Center(
                      child: Text(
                        'Male',
...
